--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>HAPPY B-DAY CERGO&amp;DEMO</h1>
     <h3 id="demo"></h3>
     
-    <h2>Sei invitato al nostro compleanno Domenica 12 Maggio ore 19.30 presso Just Cavalli Milano</h2>
+    <h2>DOMENICA 12 MAGGIO 2019<br>19.30<br>JUST CAVALLI MILANO</h2>
     
     <div class="container">
         <div class="row">
