download pdf prt1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
        <div class="row">
            <div class="col-xs-6 accredito cergo">
-               <img class="img-responsive gif" src="img/cergo.gif" alt="scarica l'accredito Demo">
+               <a href="https://docdro.id/0qM1VND"><img class="img-responsive gif" src="img/cergo.gif" alt="scarica l'accredito Demo"></a>
            </div>
            <div class="col-xs-6">
                <div class="click">clicca</div>
@@ -35,7 +35,7 @@
          
         <div class="row">
            <div class="col-xs-6 accredito demo">
-               <img class="img-responsive gif" src="img/demo.gif" alt="scarica l'accredito Cergo">   
+               <a href="https://docdro.id/0qM1VND"><img class="img-responsive gif" src="img/demo.gif" alt="scarica l'accredito Cergo"></a>   
            </div>
            <div class="col-xs-6">
                <div class="click">clicca</div>
