--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
        <div class="row">
            <div class="col-xs-6 accredito cergo">
-               <a download href="pdf/prenotazione_albergoBarca.pdf"><img class="img-responsive gif" src="img/cergo.gif" alt="scarica l'accredito Demo"></a>
+               <a download href="pdf/prenotazione_albergoBarca.pdf" target="_blank"><img class="img-responsive gif" src="img/cergo.gif" alt="scarica l'accredito Demo"></a>
            </div>
            <div class="col-xs-6">
                <div class="click">clicca</div>
@@ -37,7 +37,7 @@
          
         <div class="row">
            <div class="col-xs-6 accredito demo">
-               <a download href="pdf/prenotazione_albergoBarca.pdf"><img class="img-responsive gif" src="img/demo.gif" alt="scarica l'accredito Cergo"></a>   
+               <a download href="pdf/prenotazione_albergoBarca.pdf" target="_blank"><img class="img-responsive gif" src="img/demo.gif" alt="scarica l'accredito Cergo"></a>   
            </div>
            <div class="col-xs-6">
                <div class="click">clicca</div>
