--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
    
    <h1>HAPPY B-DAY <br><span class="titleCD">CERGO &amp; DEMO</span></h1>
    
-   <div class="containerCount">
-      <ul>
-        <li><span id="days"></span>giorni</li>
-        <li><span id="hours"></span>ore</li>
-        <li><span id="minutes"></span>minuti</li>
-        <li><span id="seconds"></span>secondi</li>
-      </ul>
+   <div class="container">
+     <div class="row">
+        <div class="col-xs-12">
+         <ul class="count">
+            <li><span id="days"></span>giorni</li>
+            <li><span id="hours"></span>ore</li>
+            <li><span id="minutes"></span>minuti</li>
+            <li><span id="seconds"></span>secondi</li>
+         </ul>
+         </div>
+     </div>
    </div>
    
    <h2>DOMENICA 12 MAGGIO 2019<br>ORE 19.30<br>JUST CAVALLI MILANO</h2>
