--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            </div>
            
           <div class="col-xs-6">
-              <img src="img/textCergo.png" style="margin-top:85px; width:500px;">
+              <img src="img/testCergo2.png" style="margin-top:85px; width:500px;">
           </div>
                       
        </div> 
