--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        </div>     
    
    <h2>DOMENICA 12 MAGGIO 2019<br>ORE 19.30<br>JUST CAVALLI MILANO</h2>
-<h3 style="text-align:center; margin-bottom: 100px!important; margin-top: -60px;">[Clicca sull'Animoji per scaricare l'invito da mostrare all'ingresso del locale]</h3>  
+<h3 style="text-align:center; margin-bottom: 100px!important; margin-top: -60px; color:#a94442;">[Clicca sull'Animoji per scaricare l'invito da mostrare all'ingresso del locale]</h3>  
           
    <div class="container">
       
