--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       
        <div class="count">
          <ul>
-            <li><span id="days"></span>giorni</li>
-            <li><span id="hours"></span>ore</li>
-            <li><span id="minutes"></span>minuti</li>
-            <li><span id="seconds"></span>secondi</li>
+            <li><span id="days" style="font-size:50px;"></span>giorni</li>
+            <li><span id="hours" style="font-size:50px;"></span>ore</li>
+            <li><span id="minutes" style="font-size:50px;"></span>minuti</li>
+            <li><span id="seconds" style="font-size:50px;"></span>secondi</li>
          </ul>
        </div>     
    
